# mytrion-ops

./: .env.example  .eslintrc.cjs  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  FLEET_INACTIVE_CARDS_SPEC.md  MINI_APP_WIRE_HANDOFF.md  NOTIFICATIONS_PHASE2_HANDOFF.md  README.md  WORKING_NOTES.md  check_schema.ts  check_schema2.ts  docker-compose.yml  drizzle.config.ts  package.json  pnpm-lock.yaml  render.yaml  test_dwhFinance.ts  tsconfig.build.json  tsconfig.json  vitest.config.ts
.claude/: settings.json
apps/agent-telegram-bot/: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  LICENSE  MULTISESSION_ARCH.md  Makefile  OCTANE.md  README.md  access.json.example  default-reminders.json.example  docker-compose.yml  plugins.json.example  pyproject.toml
apps/agent-telegram-bot/.claude/: CLAUDE.md
apps/agent-telegram-bot/docs/: README.md  deployment.md  documentation.md  hamroh-high-level-architecture.md  reference-architectures.md  tools.md
apps/agent-telegram-bot/hamroh/: __init__.py  __main__.py  access.py  config.py  mcp_server.py  models.py  plugins.py  rate_limiter.py  startup.py
apps/agent-telegram-bot/hamroh/cc_worker/: __init__.py  cc_failure_classifier.py  cc_schema.py  event_handlers.py  events.py  raw_capture.py  spec.py  worker.py
apps/agent-telegram-bot/hamroh/db/: __init__.py  database.py  messages.py  reminders.py  unauthorized.py
apps/agent-telegram-bot/hamroh/engine/: __init__.py  engine.py  format.py  restore.py  typing_indicator.py
apps/agent-telegram-bot/hamroh/helpers/: __init__.py  logging_setup.py  owner_log_notifier.py  transcript.py
apps/agent-telegram-bot/hamroh/scheduler/: __init__.py  reminder_scheduler.py  reminders_config.py
apps/agent-telegram-bot/hamroh/scripts/: trace.py  validate_skills.py
apps/agent-telegram-bot/memories/: README.md
apps/agent-telegram-bot/prompts/: README.md  project.md.example  project.md.octane  subagents.md  system.md
apps/agent-telegram-bot/scripts/: README.md  commit-and-push.sh  prune-backups.sh  sync-memories.sh  sync_octane_access.py
apps/agent-telegram-bot/skills/: README.md
apps/agent-telegram-bot/tests/: README.md
(+4137 files in other folders)
